Alterações no layout e eliminação de registros exibidos em duplicidade

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,8 @@
   <!-- Linha com RODAPÉ-->
   <div ui-view="rodape"></div>
 
+
+  
   <!-- build:js scripts/main.js -->
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
@@ -53,7 +55,9 @@
   <script src="scripts/services/lb-services.js"></script>
   <script src="scripts/services/auth.js"></script>
   <!-- endbuild -->
-
+  <script>
+    $('.carouselExampleIndicators').carousel({ cycle: true });
+  </script>
 </body>
 
 </html>
