Publicação da pag sobrenos e contato

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
   <script src="scripts/controllers/categoria-controller.js"></script>
   <script src="scripts/controllers/subcategoria-controller.js"></script>
   <script src="scripts/controllers/empresa-controller.js"></script>
+  <script src="scripts/controllers/contato-controller.js"></script>
   <script src="scripts/services/lb-services.js"></script>
   <script src="scripts/services/auth.js"></script>
   <!-- endbuild -->
