Módulo de contato com e-mail funcionando

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/footer-distributed-with-address-and-phones.css">
+  <link href="../node_modules/ng-dialog/css/ngDialog.min.css" rel="stylesheet">
+  <link href="../node_modules/ng-dialog/css/ngDialog-theme-default.min.css" rel="stylesheet">
   <!-- endbuild -->
 
 </head>
